--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -34,7 +34,7 @@ jobs:
         run: ls -la
 
       - name: merge
-        run: git remote add "revanced-patches" "https://github.com/revanced/revanced-patches.git" && git pull revanced-patches main && git remote add "revanced-patches" "https://github.com/inotia00/revanced-patches.git" && git pull revanced-patches main
+        run: git config --global pull.rebase false && git remote add "revanced-patches" "https://github.com/revanced/revanced-patches.git" && git pull revanced-patches main && git remote add "revanced-patches" "https://github.com/inotia00/revanced-patches.git" && git pull revanced-patches main
       
       - name: ls -la
         run: ls -la
