--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -34,7 +34,7 @@ jobs:
         run: ls -la
 
       - name: merge
-        run: git config --global pull.rebase false && git remote add "revanced-patches" "https://github.com/revanced/revanced-patches.git" && git pull revanced-patches main --allow-unrelated-histories && git remote add "revanced-patches" "https://github.com/inotia00/revanced-patches.git" && git pull revanced-patches main --allow-unrelated-histories
+        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2 && mv -f ./revanced-patches2 ./revanced-patches
       
       - name: ls -la
         run: ls -la
