--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -34,7 +34,7 @@ jobs:
         run: ls -la
 
       - name: merge
-        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2 && mv -f ./revanced-patches2 ./revanced-patches && 7z a ./revanced-patches rp.7z && rm -f revanced-patches && rm -f revanced-patches2
+        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2 && mv -f ./revanced-patches2 ./revanced-patches && 7z a rp.7z ./revanced-patches && rm -f revanced-patches && rm -f revanced-patches2
       
       - name: ls -la
         run: ls -la
