--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -34,7 +34,7 @@ jobs:
         run: ls -la
 
       - name: merge
-        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2 && mv -f ./revanced-patches2/* ./revanced-patches/ && 7z a rp.7z ./revanced-patches && rm -rf revanced-patches2 # && mv -f ./revanced-patches/* ./* && rm -rf revanced-patches
+        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2 && rsync -a ./revanced-patches2/* ./revanced-patches/ && 7z a rp.7z ./revanced-patches && rm -rf revanced-patches2 # && mv -f -r ./revanced-patches/* ./* && rm -rf revanced-patches
       
       - name: ls -la
         run: ls -la
