--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -33,10 +33,16 @@ jobs:
       - name: ls -la
         run: ls -la
 
-      - name: merge
-        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2 && rsync -a ./revanced-patches2/ ./revanced-patches/ && cd revanced-patches && 7z a ../rp.7z * && cd .. && rm -rf revanced-patches2 # && mv -f -r ./revanced-patches/ ./ && rm -rf revanced-patches
+      - name: clone
+        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2
       
-      - name: ls -la
+      - name: merge & delete temp
+        run: rsync -a ./revanced-patches2/ ./revanced-patches/ && rm -rf revanced-patches2
+        
+      - name: compress
+        run: cd revanced-patches && 7z a ../rp.7z *
+        
+      - name: list filestructure
         run: ls -la
       
       - name: Commit merges
