--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -47,7 +47,7 @@ jobs:
       
       - name: Commit merges
         run: |
-          git add ./revanced-patches/
+          git add -f ./revanced-patches/\*
           git config --global user.name 'Mafiadoener36'
           git config --global user.email 'Mafiadoener36@users.noreply.github.com'
           git commit -am "Automated debugMerge"
