--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -50,7 +50,7 @@ jobs:
       
       - name: Commit merges
         run: |
-          git add -f ./
+          git add ./
           git config --global user.name 'Mafiadoener36'
           git config --global user.email 'Mafiadoener36@users.noreply.github.com'
           git commit -am "Automated debugMerge"
