--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -47,6 +47,9 @@ jobs:
         
       - name: list filestructure
         run: ls -la
+        
+      - name: fetch local repo
+        run: git fetch actionsMergingTry0
       
       - name: Commit merges
         run: |
