--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -34,7 +34,7 @@ jobs:
         run: ls -la
 
       - name: clone
-        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && cd .. && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2 && cd ..
+        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2
       
       - name: list filestructure
         run: ls -la
