--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -33,8 +33,14 @@ jobs:
       - name: ls -la
         run: ls -la
 
-      - name: clone
-        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches && git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2
+      - name: clone1
+        run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches
+      
+      - name: list filestructure
+        run: ls -la
+      
+      - name: clone2
+        run: git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2
       
       - name: list filestructure
         run: ls -la
@@ -54,8 +60,8 @@ jobs:
       - name: list filestructure
         run: ls -la
         
-      - name: pull local repo
-        run: git pull
+#      - name: pull local repo
+#        run: git pull
       
       - name: Commit merges
         run: |
