--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -31,7 +31,7 @@ jobs:
         run: sudo apt-get install -y git && sudo apt-get install -y p7zip-full
         
       - name: fresh start - remove all old files
-        run: find . -maxdepth 1 -type f ! -name ".github" -exec rm {} \;
+        run: find . -maxdepth 1 -type f ! -name ".github" -exec rm -rf {} \;
 
       - name: ls -la
         run: ls -la
