--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -30,6 +30,9 @@ jobs:
       - name: Installing Dependencies
         run: sudo apt-get install -y git && sudo apt-get install -y p7zip-full
         
+      - name: ls -la
+        run: ls -la
+        
       - name: fresh start - remove all old files
         run: find . -maxdepth 1 -type f ! -name ".github" -exec rm -rf {} \;
 
