--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -28,34 +28,34 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Installing Dependencies
-        run: sudo apt-get install -y git && sudo apt-get install -y p7zip-full
+        run: sudo apt-get install -y git #&& sudo apt-get install -y p7zip-full
         
-      - name: ls -la
-        run: ls -la
+#      - name: ls -la
+#        run: ls -la
         
       - name: fresh start - remove all old files
         run: find . -maxdepth 1 -type f ! -name ".github" -exec rm -rf {} \;
 
-      - name: ls -la
-        run: ls -la
+#      - name: ls -la
+#        run: ls -la
 
       - name: clone1
         run: git clone -b main --single-branch "https://github.com/revanced/revanced-patches.git" revanced-patches
       
-      - name: list filestructure
-        run: ls -la
+#      - name: list filestructure
+#        run: ls -la
       
       - name: clone2
         run: git clone -b main --single-branch "https://github.com/inotia00/revanced-patches.git" revanced-patches2
       
-      - name: list filestructure
-        run: ls -la
+#      - name: list filestructure
+#        run: ls -la
       
       - name: merge
         run: rsync -i -a ./revanced-patches2/ ./revanced-patches/
         
-      - name: list filestructure
-        run: ls -la
+#      - name: list filestructure
+#        run: ls -la
         
       - name: delete tempClone2
         run: rm -rf revanced-patches2
@@ -63,16 +63,16 @@ jobs:
       - name: delete foreign dotfiles
         run: rm -rf ./revanced-patches/.git && rm -rf ./revanced-patches/.github && rm -rf ./revanced-patches/.idea
         
-      - name: compress
-        run: 7z a ./rp.7z ./revanced-patches/
+#      - name: compress
+#        run: 7z a ./rp.7z ./revanced-patches/
         
       - name: move to root
         run: rsync -i -a ./revanced-patches/ ./ && rm -rf revanced-patches
         
-      - name: list filestructure
-        run: ls -la
+#      - name: list filestructure
+#        run: ls -la
         
-#      - name: pull local repo
+#      - name: pull
 #        run: git pull
       
       - name: Commit merges
