--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -14,6 +14,8 @@ jobs:
       contents: write
       statuses: write
       pull-requests: write
+      id-token: write
+      deployments: write
       
 
     steps:
