--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -16,6 +16,8 @@ jobs:
       pull-requests: write
       id-token: write
       deployments: write
+      checks: write
+      security-events: write
       
 
     steps:
