--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -8,19 +8,7 @@ jobs:
 
 
     permissions:
-      actions: write
-      checks: write
       contents: write
-      deployments: write
-      id-token: write
-      issues: write
-      discussions: write
-      packages: write
-      pages: write
-      pull-requests: write
-      repository-projects: write
-      security-events: write
-      statuses: write
       
 
     steps:
@@ -28,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Installing Dependencies
-        run: sudo apt-get install -y git #&& sudo apt-get install -y p7zip-full
+        run: sudo apt-get install -y git && sudo apt-get install -y p7zip-full
         
 #      - name: ls -la
 #        run: ls -la
@@ -63,8 +51,8 @@ jobs:
       - name: delete foreign dotfiles
         run: rm -rf ./revanced-patches/.git && rm -rf ./revanced-patches/.github && rm -rf ./revanced-patches/.idea
         
-#      - name: compress
-#        run: 7z a ./rp.7z ./revanced-patches/
+      - name: compress
+        run: 7z a ./rp.7z ./revanced-patches/
         
       - name: move to root
         run: rsync -i -a ./revanced-patches/ ./ && rm -rf revanced-patches
