--- a/.github/workflows/workflow0.yaml
+++ b/.github/workflows/workflow0.yaml
@@ -15,13 +15,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Installing Dependencies
-        run: sudo apt-get install -y git && sudo apt-get install -y p7zip-full
+        run: sudo apt-get install -y git #&& sudo apt-get install -y p7zip-full
         
 #      - name: ls -la
 #        run: ls -la
         
-      - name: fresh start - remove all old files
-        run: find . -maxdepth 1 -type f ! -name ".github" -exec rm -rf {} \;
+#      - name: fresh start - remove all old files
+#        run: find . -maxdepth 1 -type f ! -name ".github" -exec rm -rf {} \;
 
 #      - name: ls -la
 #        run: ls -la
@@ -50,8 +50,8 @@ jobs:
       - name: delete foreign dotfiles
         run: rm -rf ./revanced-patches/.git && rm -rf ./revanced-patches/.github && rm -rf ./revanced-patches/.idea
         
-      - name: compress
-        run: 7z a ./rp.7z ./revanced-patches/
+#      - name: compress
+#        run: 7z a ./rp.7z ./revanced-patches/
         
       - name: move to root
         run: rsync -i -a ./revanced-patches/ ./ && rm -rf revanced-patches
