--- a/.github/workflows/autoTestTry1.yaml
+++ b/.github/workflows/autoTestTry1.yaml
@@ -1,8 +1,8 @@
 name: autoTestTry1
 
-on:
-  schedule:
-    - cron: "*/5 * * * *"
+on: workflow_dispatch
+#  schedule:
+#    - cron: "*/5 * * * *"
 
 jobs:
   workflow0-code:
